# sgxdedup

./: .gitignore  CMakeLists.txt  LICENSE  README.html  README.md  config.json
Scripts/: buildDebugMode.sh  buildReleaseMode.sh  cleanBuild.sh  cleanRunTime.sh  environmentInstall.sh
include/: chunker.hpp  configure.hpp  cryptoPrimitive.hpp  dataSR.hpp  dataStructure.hpp  database.hpp  dedupCore.hpp  encoder.hpp  fingerprinter.hpp  keyClient.hpp  keyServer.hpp  messageQueue.hpp  protocol.hpp  recvDecode.hpp  retriever.hpp  sender.hpp  ssl.hpp  storageCore.hpp  systemSettings.hpp
key/: iasclient.crt  iasclient.pem
key/sslKeys/: ca-cert.pem  ca-cert.srl  ca-key.pem  ca-req.csr  client-cert.pem  client-key.pem  client-req.csr  server-cert.pem  server-key.pem  server-req.csr
src/: CMakeLists.txt
src/client/: CMakeLists.txt  chunker.cpp  clientMain.cpp  encoder.cpp  fingerprinter.cpp  keyClient.cpp  recvDecode.cpp  retriever.cpp  sender.cpp
src/enclave/: CMakeLists.txt
src/enclave/include/: enclaveSession.hpp  kmClient.hpp  kmServer.hpp  km_enclave_u.h  powClient.hpp  powServer.hpp  pow_enclave_u.h  sgxErrorSupport.h  types.h
src/enclave/km_enclave/: CMakeLists.txt  km_enclave.config.xml  km_enclave.cpp  km_enclave.edl
src/enclave/pow_enclave/: CMakeLists.txt  pow_enclave.config.xml  pow_enclave.cpp  pow_enclave.edl
src/enclave/src/: CMakeLists.txt  kmClient.cpp  kmServer.cpp  powClient.cpp  powServer.cpp
src/enclave/utils/: CMakeLists.txt  agent_wget.cpp  base64.c  common.cpp  crypto.c  hexutil.c  iasrequest.cpp  json.cpp  logfile.c  sgxErrorSupport.cpp
src/keymanage/: CMakeLists.txt  keyServer.cpp  keyServerMain.cpp
src/server/: CMakeLists.txt  ServerMain.cpp  dataSR.cpp  dedupCore.cpp  storageCore.cpp
src/util/: CMakeLists.txt  configure.cpp  cryptoPrimitive.cpp  database.cpp  ssl.cpp
